--- a/.gomarkdoc.yml
+++ b/.gomarkdoc.yml
@@ -1,10 +1,10 @@
 output: "{{.Dir}}/README.md"
 header: |-
-  [![Go Report Card](https://goreportcard.com/badge/github.com/princjef/gomarkdoc)](https://goreportcard.com/report/github.com/princjef/gomarkdoc)
-  [![GitHub Actions](https://github.com/princjef/gomarkdoc/workflows/Test/badge.svg)](https://github.com/princjef/gomarkdoc/actions?query=workflow%3ATest+branch%3Amaster)
-  [![Go Reference](https://pkg.go.dev/badge/github.com/princjef/gomarkdoc.svg)](https://pkg.go.dev/github.com/princjef/gomarkdoc)
+  [![Go Report Card](https://goreportcard.com/badge/github.com/frgrisk/gomarkdoc)](https://goreportcard.com/report/github.com/frgrisk/gomarkdoc)
+  [![GitHub Actions](https://github.com/frgrisk/gomarkdoc/workflows/Test/badge.svg)](https://github.com/frgrisk/gomarkdoc/actions?query=workflow%3ATest+branch%3Amaster)
+  [![Go Reference](https://pkg.go.dev/badge/github.com/frgrisk/gomarkdoc.svg)](https://pkg.go.dev/github.com/frgrisk/gomarkdoc)
   [![codecov](https://codecov.io/gh/princjef/gomarkdoc/branch/master/graph/badge.svg?token=171XNH5XLT)](https://codecov.io/gh/princjef/gomarkdoc)
 repository:
-  url: https://github.com/princjef/gomarkdoc
+  url: https://github.com/frgrisk/gomarkdoc
   defaultBranch: master
   path: /
